# snake-charmer

./: .gitignore  LICENSE  README.md  cookiecutter.json
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.__project_name}}/: .env  .gitignore  .pre-commit-config.yaml  AUTHORS.md  CONTRIBUTING.md  HISTORY.md  README.md  pyproject.toml  {{cookiecutter.requirements_file}}
{{cookiecutter.__project_name}}/.editor/: {{cookiecutter.__project_name}}.code-workspace
{{cookiecutter.__project_name}}/.github/: issue_template.md  pr_template.md
{{cookiecutter.__project_name}}/.github/workflows/: ci.yaml
{{cookiecutter.__project_name}}/tests/: __init__.py
{{cookiecutter.__project_name}}/{{cookiecutter.__project_name}}/: __init__.py  cli.py
